traversal.snake.Snake.scala.code
var y=0
override def run() {baisseBrosse();while(!a()){ {if (estFaceMur() && y==0){gauche();avance();gauche();y=1};if(estFaceMur()&& y==1){droite();avance();droite();y=0};else {avance()}};baisseBrosse()
                                           }}


def a(){if (getDirection()==Direction.EST){gauche();if(estFaceMur()){droite();return true} else {droite();return false};return false}